# standard-environment

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: c-cpp.yml  docker-image.yml  docker-publish.yml
test/: CMakeLists.txt  testcpp.cpp
